IntelliJ quick fixes -- general code clean-up